--- a/styles/refined-styles/grid.css
+++ b/styles/refined-styles/grid.css
@@ -29,7 +29,7 @@
   }
 
   .flex-cell {
-     margin-top: 25px;
+     margin-top: 16px;
   }
 
   @media screen and (min-width: 750px) {
